@@ -29,22 +29,111 @@
   require 'MonetDBConnection'
   require 'MonetDBData'
   require 'MonetDBExceptions'
+  
+    # = Introduction
+    #
+    # A typical sequence of events is as follows:
+    # Create a database instance (handle), invoke query using the database handle to send the statement to the server and get back a result set object.
+    #
+    # A result set object  has methods for fetching rows, moving around in the result set, obtaining column metadata, and releasing the result set.
+    # A result set object is an instance of the MonetDBData class.
+    #
+    # Records can be returneds as arrays and iterators over the set.
+    #
+    # A database handler (dbh) is and instance of the MonetDB class.
+    #
+    # = Connection management 
+    #
+    #  connect    -  establish a new connection
+    #                * user: username (default is monetdb)
+    #                * passwd: password (default is monetdb)
+    #                * lang: language (default is sql) 
+    #                * host: server hostanme or ip  (default is localhost)
+    #                * port: server port (default is 50000)
+    #                * db_name: name of the database to connect to
+    #                * auth_type: hashing function to use during authentication (default is SHA1)
+    #
+    #  is_connected? - returns true if there is an active connection to a server, false otherwise 
+    #  reconnect     - recconnect to a server
+    #  close         - terminate a connection
+    #  auto_commit?  - returns ture if the session is running in auto commit mode, false otherwise  
+    #  auto_commit   - enable/disable auto commit mode.
+    #
+    #  query         - fire a query
+    #
+    # Currently MAPI protocols 8 and 9 are supported.
+    #
+    # = Managing record sets 
+    #
+    #
+    # A record set is represented as an instance of the MonetDBData class; the class provides methods to manage retrieved data.
+    #
+    #
+    # The following methods allow to iterate over data:
+    # 
+    # fetch          - iterates over the record set and retrieves on row at a time. Each row is returned as an array.
+    # fetch_hash     - iterates over columns (on cell at a time). 
+    # fetch_all_hash - returns record set entries hashed by column name orderd by column position.
+    # 
+    # To return the record set as an array (with each tuple stored as array of fields) the following method can be used:
+    # 
+    # fetch_all      - fetch all rows and store them  
+    #
+    #
+    # Information about the retrieved record set can be obtained via the following methods:
+    #
+    # num_rows       - returns the number of rows present in the record set
+    # num_fields     - returns the number of fields (columns) that compose the schema
+    # name_fields    - returns the (ordered) name of the schema's columns
+    # type_fields    - returns the (ordered) types list of the schema's columns
+    #
+    # To release a record set MonetDBData#free can be used.
+    #
+    # = Type conversion
+    #
+    # A mapping between SQL and ruby type is supported. Each retrieved field can be converted to a ruby datatype via 
+    # a getTYPE method.
+    #
+    # The currently supported cast methods are:
+    #
+    # getInt        - convert to an integer value
+    # getFloat      - convert to a floating point value
+    # getString     - return a string representation of the value, with trailing and leading " characters removed
+    # getBlob       - convert an SQL stored HEX string to its binary representation
+    # getTime       - return a string representation of a TIME field
+    # getDate       - return a string representation of a DATE field
+    # getDateTime   - convert a TIMESTAMP field to a ruby Time object
+    # getChar       - on ruby >= 1.9, convert a CHAR field to char 
+    # getBool       - convert a BOOLEAN field to a ruby bool object. If the value of the field is unknown, nil is returned
+    # getNull       - convert a NULL value to a nil object
+    #
+    #
+    # = Transactions 
+    #
+    # By default monetdb works in auto_commit mode. To turn this feature off MonetDB#auto_commit(flag=false) can be used.
+    #
+    # Once auto_commit has been disable it is possible to start transactions, create/delete savepoints, rollback and commit with 
+    # the usual SQL statements.
+    #
+    # Savepoints IDs can be generated using the MonetDB#save method. To release a savepoint ID use MonetDB#release.
+    # 
+    # Savepoints can be accessed (as a stack) with the MonetDB#transactions method.
+    #
+    # example/standalone.rb contains usage example of the above mentioned methods.
 
   class MonetDB
-    Q_TABLE               = "1" # SELECT operation
-    Q_UPDATE              = "2" # INSERT/UPDATE operations
-    Q_CREATE              = "3" # CREATE/DROP TABLE operations
-  
     def initalize()
       @connection = nil 
     end
   
-    #  Establish a new connection
-    # * user: username (default is monetdb)
-    # * passwd: password (default is monetdb)
-    # * lang: language (default is sql) 
-    # * host: server hostanme or ip  (default is localhost)
-    # * port: server port (default is 50000)
+    # Establish a new connection.
+    #                * user: username (default is monetdb)
+    #                * passwd: password (default is monetdb)
+    #                * lang: language (default is sql) 
+    #                * host: server hostanme or ip  (default is localhost)
+    #                * port: server port (default is 50000)
+    #                * db_name: name of the database to connect to
+    #                * auth_type: hashing function to use during authentication (default is SHA1)
     def connect(username = "monetdb", password = "monetdb", lang = "sql", host="127.0.0.1", port = "50000", db_name = "demo", auth_type = "SHA1")
       # TODO: handle pools of connections
       @username = username
@@ -58,10 +147,11 @@
       @connection.connect(@db_name, @auth_type)
     end
   
-    # Send a <b> user submitted </b> query to the server and store the response
-    def query(q = "", type_cast = false)
+    # Send a <b> user submitted </b> query to the server and store the response.
+    # Returns and instance of MonetDBData.
+    def query(q = "")
       if  @connection != nil 
-        @data = MonetDBData.new(@connection, type_cast = type_cast)
+        @data = MonetDBData.new(@connection)
         @data.execute(q)    
       end
       return @data
@@ -96,19 +186,17 @@
       @connection.auto_commit?
     end
     
-    def commit
-      @connection.commit
-    end
-    
     # Returns the name of the last savepoint in a transactions pool
     def transactions
       @connection.savepoint
     end
     
+    # Create a new savepoint ID
     def save
       @connection.transactions.save
     end
     
+    # Release a savepoint ID
     def release
       @connection.transactions.release
     end
